#


[check]
metadata = 1
strict = 1


[metadata]
author = sinoroc
author_email = sinoroc.code+python@gmail.com
classifiers =
    Framework :: Pyramid
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Internet :: WWW/HTTP
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules
description = REST APIs documented and sensible
license = Apache-2.0  # https://spdx.org/licenses/
long_description = file: README.rst
long_description_content_type = text/x-rst
name = rapids
url = https://github.com/sinoroc/rapids


[options]
install_requires =
    pkginfo
    pyramid
    PyYAML
    venusian
    zope.interface
package_dir =
    = src
packages = find:


[options.extras_require]
package =
    twine
    wheel
test =
    pytest
    pytest-pycodestyle
    pytest-pylint
    WebTest


[options.packages.find]
where = src


[tool:pytest]
addopts =
    --pylint-error-types='CEFIRW'


# EOF
