#


[check]
metadata = 1
strict = 1

[metadata]
author = sinoroc
author_email = sinoroc.code+python@gmail.com
description = REST APIs documented and sensible
license = Apache-2.0  # https://spdx.org/licenses/
license_file = LICENSE.txt
long_description = file: README.rst
long_description_content_type = text/x-rst
name = rapids
project_urls =
    GitHub = https://github.com/sinoroc/rapids
    GitLab = https://gitlab.com/sinoroc/rapids
url = https://pypi.org/project/rapids/

[options]
install_requires =
    pkginfo
    pyramid
    PyYAML
    venusian
    zope.interface
package_dir =
    = src
packages = find:

[options.extras_require]
package =
    twine
    wheel
test =
    pytest
    pytest-pycodestyle
    pytest-pylint
    WebTest

[options.packages.find]
where = src

[tool:pytest]
addopts =
    --pylint-error-types='CEFIRW'


# EOF
